fix: align reward ladder in the menu to center

--- a/src/modules/game/ui/GamePlayStageMenuDrawer/styles.module.css
+++ b/src/modules/game/ui/GamePlayStageMenuDrawer/styles.module.css
@@ -13,6 +13,7 @@
 .main {
   display: flex;
   flex-direction: column;
+  align-items: center;
   justify-content: center;
 
   flex-grow: 1;
